upd: upd voice mode

--- a/onehundredideasrb/src/index.html
+++ b/onehundredideasrb/src/index.html
@@ -27,6 +27,10 @@
                         <span id="voice-info">активируйте помощник  <span class="material-icons">mic</span></span>
                     </div>
                 </section>
+                <section id="voiceModeResults">
+                    <div class="voise-res-header"><span id="voiceModeResultsBack" class="material-icons">close</span></div>
+                    <iframe id="voiceiFrame" src="" frameborder="0"></iframe>
+                </section>
             </div>
         </div>
     </app>
